add location.html and styles

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 
     <!-- link CSS -->
     <link rel="icon" href="./assets/favicon-32x32.png">
-    <link rel="stylesheet" href="./styles/styles.css">
+    <link rel="stylesheet" href="./styles/index.css">
+    <link rel="stylesheet" href="./styles/home.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <header>
@@ -17,7 +19,7 @@
             <h1>modern arts gallery</h1>
         <p>The arts in the collection of the Modern Art Gallery all started from a spark of inspiration. Will these pieces inspire you? Visit us and find out.</p>
         <div class="location">
-            <button class="btn primary-btn">our location</button>
+            <button class="btn primary-btn"> <a href="./location.html">our location</a></button>
             <div class="arrow arrow-right">
                 <img src="./assets/icon-arrow-right.svg" alt="right">
             </div>
@@ -48,13 +50,13 @@
         <p>The Modern Art Gallery is free to all visitors and open seven days a week from 8am to 9pm. Find us at 99 King Street, Newport, USA.</p>
         <div class="socials">
             <span>
-                <img src="./assets/icon-facebook.svg" alt="facebook logo">
+                <i class="fa-brands fa-facebook-square"></i>
             </span>
             <span>
-                <img src="./assets/icon-instagram.svg" alt="instagram logo">
+                <i class="fa-brands fa-instagram"></i>
             </span>
             <span>
-                <img src="./assets/icon-twitter.svg" alt="twitter logo">
+                <i class="fa-brands fa-twitter"></i>
             </span>
         </div>
     </footer>
